# nrm-desktop

./: .eslintrc-auto-import.json  .gitignore  AGENTS.md  CHANGELOG.md  CHANGELOG.zh-CN.md  LICENSE  README.md  README.zh-CN.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  uno.config.ts  vite.config.ts  vitest.config.ts
.claude/: launch.json
docs/: release-install-guide.md  release-install-guide.release.md  release-install-guide.zh-CN.md
scripts/: apply-updater-pubkey.mjs  artifact-names.mjs  build-release-body.mjs  changelog-context.mjs  changelog-context.test.mjs  check-release-context.mjs  ci-timing.mjs  ci-timing.test.mjs  cleanup-github-release-assets.mjs  generate-icons.cjs  generate-updater-manifest.mjs  generate-updater-manifest.test.mjs  install-git-hooks.mjs  prepare-release-assets-dir.mjs  prepare-release.mjs  prepare-release.test.mjs  project-meta.mjs  project-meta.test.mjs  publish-updater-manifest.mjs  render-release-install-guide.mjs  resolve-release-download-slug.mjs  resolve-release-download-slug.test.mjs  spawn-pnpm.mjs  sync-app-version.mjs  sync-pull.mjs  sync-remote-tags.mjs  tauri-build-config-overlay.mjs  tauri-build-win.mjs  tauri-build-with-output.mjs  tauri-dev-auto-port.mjs  (+2 more)
src/: App.vue  (+4 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: app_settings.rs  commands.rs  instance_lock.rs  lib.rs  main.rs  models.rs  npmrc.rs  paths.rs  project_registry.rs  proxy.rs  registries.rs  registry_config.rs  speedtest.rs  tray.rs
(+126 files in other folders)
